dev/metabase-db-service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: metabase-db
  labels:
    app: metabase-db
spec:
  ports:
    - port: 5432
      targetPort: 5432
      name: postgres
  selector:
    app: metabase-db
