dev/metabase-service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: metabase
  labels:
    app: metabase
    app.kubernetes.io/name: metabase
spec:
  type: ClusterIP
  ports:
    - port: 80
      targetPort: 3000
      name: http
  selector:
    app: metabase
